@@ -6,7 +6,6 @@ spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
-hardening-no-stackprotector
 
 # The libnvidia-compiler.so.* SONAME changes with every upstream
 # release.
