@@ -3,7 +3,6 @@
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
-hardening-no-stackprotector
 
 # Use wildcard instead of exact path substitution, this is a M-A: same package.
 embedded-library usr/lib*/libnvidia-fatbinaryloader.so.#VERSION#: zlib
