@@ -4,7 +4,6 @@ spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
-hardening-no-stackprotector
 
 # Use wildcard instead of exact path substitution, this is a M-A: same package.
 embedded-library usr/lib*/libnvidia-ptxjitcompiler.so.#VERSION#: zlib
