@@ -4,7 +4,6 @@
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
-hardening-no-stackprotector
 
 # There are multiple vendors providing this library.
 package-name-doesnt-match-sonames libOpenCL1
