@@ -6,7 +6,6 @@ hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-pie
 hardening-no-relro
-hardening-no-stackprotector
 
 # The current setup involving multiple chained alternatives would be very
 # hard to migrate to /usr/libexec.
