@@ -4,4 +4,3 @@ spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
-hardening-no-stackprotector
